- Fixed a crash when middle clicking a block and having Variant Selector module off
- Middle clicking a variant block while NOT having its parent variant in hand will now make you select the latter